--- a/recipes/index.html
+++ b/recipes/index.html
@@ -4,7 +4,15 @@
     <title>Cornflake Chicken Tender Recipe</title>
 
         <body>
-            <a href="./cornflake-chicken-tenders.html">Cornflake Chicken Tenders</a>
+
+            <img src="../img/easymeals.jpg">
+
+            <ul>
+                <li><a href="./cornflake-chicken-tenders.html">Cornflake Chicken Tenders</a></li>
+                <li><a href="../recipes/homemade-margherita-pizza.html">Homemade Margherita Pizza</a></li>
+                <li><a href="../recipes/redvelvet-pancakes.html">Redvelvet Pancakes</a></li>
+            </ul>     
+
         </body>
     
 </html>
