Edited README.md after completing assignment

--- a/recipes/homemade-margherita-pizza.html
+++ b/recipes/homemade-margherita-pizza.html
@@ -5,7 +5,7 @@
 
         <body>
             <h1>Home Made Margherita Pizza</h1>
-            <img src="../img/margherita-pizza.jpeg">
+            <img src="../img/margherita-pizza.jpeg" alt="Photo of Margherita Pizza">
             <p>When it comes to classics, you can’t beat a simple Margherita pizza. If you’re new to making pizza at home, this simple recipe is one of Ooni’s most-loved pizza recipes and a great place to start. Enjoy this classic combination of gooey mozzarella, sweet-tangy tomato sauce and fragrant fresh basil.</p>
 
             <h3>Ingredients</h3>
