--- a/recipes/index.html
+++ b/recipes/index.html
@@ -5,7 +5,7 @@
 
         <body>
 
-            <img src="../img/easymeals.jpg">
+            <img src="../img/easymeals.jpg" alt="Picture of logo easy home meals">
 
             <ul>
                 <li><a href="./cornflake-chicken-tenders.html">Cornflake Chicken Tenders</a></li>
