--- a/recipes/redvelvet-pancakes.html
+++ b/recipes/redvelvet-pancakes.html
@@ -5,7 +5,7 @@
 
         <body>
             <h1>Redvelvet Pancakes</h1>
-            <img src="../img/redvelvetpancakes.jpg">
+            <img src="../img/redvelvetpancakes.jpg" alt="photo of redvelvet pancakes with cream cheese frosting">
             <h2>Ingredients</h2>
             <h3>Cream Cheese Topping</h3>
                 <ul>
