updated location of index.html as well as updating code to match new root

--- a/recipes/cornflake-chicken-tenders.html
+++ b/recipes/cornflake-chicken-tenders.html
@@ -49,7 +49,7 @@
                 <ul>
                     <a href="../recipes/cornflake-chicken-tenders.html">Return To Top</a>
                         <br>
-                    <a href="../recipes/index.html">Return To Main Page</a> 
+                    <a href="../index.html">Return To Main Page</a> 
                 </ul>  
           
 
