--- a/recipes/homemade-margherita-pizza.html
+++ b/recipes/homemade-margherita-pizza.html
@@ -36,7 +36,7 @@
                 <ul>
                     <a href="../recipes/homemade-margherita-pizza.html">Return To Top</a>
                     <br>
-                    <a href="../recipes/index.html">Return To Main Page</a>
+                    <a href="../index.html">Return To Main Page</a>
             
             
         </body>
