--- a/recipes/redvelvet-pancakes.html
+++ b/recipes/redvelvet-pancakes.html
@@ -35,7 +35,7 @@
             </ol>
             <a href="../recipes/redvelvet-pancakes.html">Return To Top</a>
             <br>
-            <a href="../recipes/index.html">Return To Main Page</a>
+            <a href="../index.html">Return To Main Page</a>
             
         </body>
     
